--- a/DavidKernel/DavidKernel-Info.plist
+++ b/DavidKernel/DavidKernel-Info.plist
@@ -25,6 +25,11 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2012년 __MyCompanyName__. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
-	<dict/>
+	<dict>
+		<key>com.apple.kpi.libkern</key>
+		<string>11.2.0</string>
+		<key>com.apple.kpi.bsd</key>
+		<string>11.2.0</string>
+	</dict>
 </dict>
 </plist>
